# talkwalker.archetype

./: README.md  archetype.rhai  archetype.yaml
contents/base/{{ project-name }}/: Dockerfile  logging.yaml  pyproject.toml  rm.sh
contents/base/{{ project-name }}/.github/workflows/: build_docker_container.yml
contents/base/{{ project-name }}/.platform/kubernetes/base/: buckets.yaml  configmap.yaml  kustomization.yaml  secrets_bucket_policy_platform_task.yaml
contents/package/{{ project-name }}/src/{{ project_name }}/{{ package_name }}/: credits.py  driver.py  main.py  record.py  source.py
